# helloworld

./: README.md
private_plan/backend/: Cargo.toml  diesel.toml
private_plan/backend/src/: main.rs  routes.rs
private_plan/backend/src/api/: auth.rs  mod.rs  plan.rs
private_plan/backend/src/db/: mod.rs
private_plan/backend/src/models/: mod.rs  plan.rs  response.rs  user.rs
private_plan/backend/src/utils/: errors.rs
private_plan/test/diesel_learning/: Cargo.toml  diesel.toml
private_plan/test/diesel_learning/src/: lib.rs  models.rs
