[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = {version = "2.2.0", features = ["postgres","sqlite", "returning_clauses_for_sqlite_3_35"]}
dotenvy = "0.15"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = {version = "1.0", features=["v4", "serde"]}
tokio = {version = "1.0", features=["full"]}
bcrypt = "0.14"
dotenv = "0.15"
chrono = {version="0.4", features=["serde"]}
env_logger = "0.11.8"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
